resolved issue with stuck screen

--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ h1 {
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 9999;
+  z-index: 8000;
   color: white;
   background-image: url("static/start_screen.svg");
   background-size: cover; }
